--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Icon
 .com.apple.timemachine.donotpresent
 
 .vscode
+.sass-cache
 
 # Directories potentially created on remote AFP share
 .AppleDB
