Add tag functionalities

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: きままにNLP
 
 # Short bio or description (displayed in the header)
-description: A Technical Blog
+description: A Technical Blog about NLP and ML
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://pbs.twimg.com/profile_images/1112635060480442368/Ou7bjYFs_400x400.png
