Add a new post & modify a contact form

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://pbs.twimg.com/profile_images/1112635060480442368/Ou7bjYFs_400x40
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: gucci.research@gmail.com
+  email: set # just type anything here for a working email icon
   facebook:
   flickr:
   github: gucci-j
