--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-seo-tag # SEO
+  - jekyll-paginate # Pagenator 
 
 # Exclude these files from your production _site
 exclude:
@@ -85,6 +86,10 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+# jekyll-pagenate
+paginate: 10
+paginate_path: "/page:num/"
 
 twitter:
   username: _gucciiiii
